--- a/dicee.html
+++ b/dicee.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Dicee</title>
     <link rel="stylesheet" href="styles.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins&display=swap" rel="stylesheet">
   </head>
   <body>
 
